--- a/style.css
+++ b/style.css
@@ -1,3 +1,29 @@
+@font-face {
+    font-family: "inter", sans-serif;
+    src: url(./assets/fonts/Inter-VariableFont_slnt\,wght.ttf);
+}
+
+*{
+    margin: 0;
+    padding: 0;
+    font-family: "inter", sans-serif;
+}
+body {
+    line-height: 1.5;
+    min-height: 100vh;
+    background-color: hsl(35, 77%, 62%, .05) ;
+}
+
+
+:root{
+    --Softorange: hsl(35, 77%, 62%);
+    --Softred: hsl(5, 85%, 63%);
+
+    --Off-white: hsl(36, 100%, 99%);
+    --Grayishblue: hsl(233, 8%, 79%);
+    --Darkgrayishblue: hsl(236, 13%, 42%);
+    --Verydarkblue: hsl(240, 100%, 5%);
+}
 
 
 .attribution {
