--- a/style.css
+++ b/style.css
@@ -13,6 +13,17 @@ body {
     line-height: 1.5;
     min-height: 100vh;
     background-color: hsl(35, 77%, 62%, .05) ;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+nav{
+    position: fixed;
+    background-color: azure;
+    width: 100vw;
+    margin: 20px;
+    top: 0;
 }
 
 :root{
