Made changes to the html and css files

--- a/style.css
+++ b/style.css
@@ -16,15 +16,44 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+    padding: 20px;
 }
 
 nav{
     position: fixed;
     background-color: azure;
-    width: 100vw;
-    margin: 20px;
+    width: 96vw;
+    margin: 10px;
     top: 0;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 20px;
 }
+
+.links ul{
+    display: flex;
+    align-items: center;
+}
+
+ul{
+    list-style: none;
+}
+
+.links ul li a{
+    text-decoration: none;
+    color: var(--Verydarkblue);
+    padding: 10px;
+    font-weight: 500;
+}
+
+.links ul li:hover a{
+    color: var(--Softred);
+    font-weight: 700;
+}
+
+
+
 
 :root{
     --Softorange: hsl(35, 77%, 62%);
