--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ body {
     align-items: center;
     justify-content: center;
     padding: 20px;
+    flex-direction: column;
 }
 
 nav{
@@ -53,17 +54,39 @@ ul{
 }
 
 .firstContainer{
-    width: 100%;
     display: grid;
+    gap: 10px;
     grid-template-columns: repeat(3, 1fr);
+    border: 1px solid var(--Softred);
 }
 .box{
-    margin: 10px 10px;
-    height: 500px;
-    width: 200px;
+    height: 150px;
+    width: 350px;
     background-color: var(--Verydarkblue);
 }
 
+.box1{
+    background-color: aqua;
+    grid-column: span 2;
+}
+
+.box2{
+    background-color: maroon;
+}
+.box3{
+    background-color: purple;
+}
+.box4{
+    background-color: wheat;
+    grid-column: span 2;
+}
+.box5{
+    background-color: darkblue;
+}
+.box6{
+    background-color: teal;
+    
+}
 
 
 
